# turtlebot

./: README.md
simulink/circle1_ert_rtw/: MW_target_hardware_resources.h  buildInfo.mat  circle1.cpp  circle1_types.h  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  ert_main.cpp  ros2ModelInfo.mat  ros2nodeinterface.h  rtmodel.h  rtw_proj.tmw  rtwtypeschksum.mat  slros2_initialize.cpp  slros2_initialize.h  slros_busmsg_conversion.h
simulink/circle1_ert_rtw/tmwinternal/: simulink_cache.xml  tr
simulink/designs/: circle1.slx  controller.slx  controller.slx.original  sine_wave.slx  spiral1.slx  spiral1.slx.autosave  spiral1.slx.original  spiral1.slxc  trajectory1.slx  trajectory1.slxc  trajectory2.slx  trajectory2.slxc
simulink/spiral1_ert_rtw/: MW_target_hardware_resources.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  ert_main.cpp  main.cpp  ros2ModelInfo.mat  ros2nodeinterface.cpp  ros2nodeinterface.h  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat  spiral1.cpp  spiral1_private.h  spiral1_types.h
simulink/spiral1_ert_rtw/tmwinternal/: simulink_cache.xml  tr
simulink/src/circle1/: CMakeLists.txt  package.xml  packageInfo.mat
simulink/src/circle1/include/circle1/: circle1.h  circle1_private.h  rtwtypes.h  slros_msgconvert_utils.h  visibility_control.h
simulink/src/circle1/src/: main.cpp  ros2nodeinterface.cpp  slros_busmsg_conversion.cpp
simulink/src/spiral1/: CMakeLists.txt  package.xml  packageInfo.mat
simulink/src/spiral1/include/spiral1/: rtGetInf.h  rtmodel.h  slros2_generic_pubsub.h  slros2_initialize.h  slros_busmsg_conversion.h  spiral1.h  visibility_control.h
simulink/src/spiral1/src/: rtGetInf.cpp  rtGetNaN.cpp  slros2_initialize.cpp  slros_busmsg_conversion.cpp
simulink/src/trajectory1/: CMakeLists.txt  package.xml  packageInfo.mat
simulink/src/trajectory1/include/trajectory1/: ros2nodeinterface.h  rtGetInf.h  rtGetNaN.h  rt_nonfinite.h  rtwtypes.h  slros_busmsg_conversion.h  trajectory1_types.h  visibility_control.h
simulink/src/trajectory1/src/: rtGetNaN.cpp  rt_nonfinite.cpp  slros2_initialize.cpp
simulink/src/trajectory2/: CMakeLists.txt  package.xml  packageInfo.mat
simulink/src/trajectory2/include/trajectory2/: ros2nodeinterface.h  rt_defines.h  rtmodel.h  trajectory2_private.h  visibility_control.h
simulink/src/trajectory2/src/: ros2nodeinterface.cpp  rtGetInf.cpp  rt_nonfinite.cpp  trajectory2.cpp
simulink/trajectory1_ert_rtw/: buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  ert_main.cpp  main.cpp  ros2ModelInfo.mat  ros2nodeinterface.cpp  rtGetInf.cpp  rt_defines.h  rtmodel.h  rtw_proj.tmw  rtwtypeschksum.mat  slros2_initialize.h  slros_busmsg_conversion.cpp  trajectory1.cpp  trajectory1.h  trajectory1_private.h
simulink/trajectory1_ert_rtw/tmwinternal/: simulink_cache.xml  tr
simulink/trajectory2_ert_rtw/: MW_target_hardware_resources.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  codertarget_assembly_flags.mk  compileInfo.mat  ert_main.cpp  main.cpp  ros2ModelInfo.mat  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat  slros2_initialize.cpp  slros2_initialize.h  slros_busmsg_conversion.h  trajectory2.h  trajectory2_types.h
simulink/trajectory2_ert_rtw/tmwinternal/: simulink_cache.xml  tr
