<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trajectory2</name>
  <version>1.0.0</version>
  <description>TODO</description>
  <maintainer email="ydvanuj0261@gmail.com">anuj</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
<!-- Generated on Mon Jan 27 18:07:40 2025 -->
